--- a/face-classifier/src/style.css
+++ b/face-classifier/src/style.css
@@ -11,3 +11,7 @@ body,
 #app {
   @apply w-full h-full;
 }
+
+.form-container {
+  @apply flex flex-col justify-center items-center w-full h-full bg-black;
+}
